# rental-manager

./: .gitignore  Dockerfile  README.md  pyproject.toml  repository.yaml
rental_manager/: .env.example  Dockerfile  build.yaml  config.yaml  pyproject.toml  run.sh
rental_manager/src/rental_manager/: __init__.py  config.py  main.py
rental_manager/src/rental_manager/api/: routes.py
rental_manager/src/rental_manager/core/: code_manager.py  ical_parser.py  manager.py  sheets_backup.py  sync_manager.py
rental_manager/src/rental_manager/db/: database.py  models.py
rental_manager/src/rental_manager/ha/: __init__.py  client.py  event_listener.py
rental_manager/src/rental_manager/hosttools/: client.py
rental_manager/src/rental_manager/scheduler/: scheduler.py
rental_manager/src/rental_manager/web/static/css/: styles.css
rental_manager/src/rental_manager/web/static/js/: app.js
rental_manager/src/rental_manager/web/templates/: index.html
src/rental_manager/: config.py
src/rental_manager/api/: __init__.py  routes.py
src/rental_manager/core/: __init__.py  manager.py  sync_manager.py
src/rental_manager/db/: database.py
src/rental_manager/ha/: client.py
src/rental_manager/scheduler/: __init__.py  scheduler.py
src/rental_manager/web/static/css/: styles.css
src/rental_manager/web/static/js/: app.js
src/rental_manager/web/templates/: index.html
